force-app/src/objects/cpm__Audit_Trail__c.object
<CustomObject>
    <description>An object containing action done that are somehow related to PaymentHub and all it&apos;s extension packages.</description>
    <fields>
        <fullName>cpm__Action__c</fullName>
        <description>A description of the action that has been taken.</description>
        <inlineHelpText>The action that has been taken by the User.</inlineHelpText>
        <label>Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Package__c</fullName>
        <description>The Name of the packages that has cuased the record to be logged.</description>
        <inlineHelpText>The name of the extension package that cuased this log.</inlineHelpText>
        <label>Package</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Type__c</fullName>
        <description>The Type of audit trail.</description>
        <label>Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that has performed the action that cuased a record in audit trail.</description>
        <inlineHelpText>The user that has performed the action that cuased this audit trail record.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Audit_Trails</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Audit Trail</label>
    <listViews>
        <fullName>cpm__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CPMAU-{000000}</displayFormat>
        <label>Audit Trail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>